@@ -1,3 +1,4 @@
+DIST 3.10-sched-bfs-440-r1.patch 244053 SHA256 0b921d45036d411c4e04b5f6334dee3e7bfd9f131a46742aae748607a30f59d9 SHA512 c8c9f76e780f8f4c631ce161373f6a3d69ac785db080ae30d64d53b249025394d77293e074c2bed624627ecb0fb47e4745fb0676ccc2df004abf4d9f73cfc83b WHIRLPOOL 6001792a570366829d478fb5e84d33a68eff181c4a29d2ef4e2049336e1b2bf011b0d07c38c446f4acbc461a244571b78bf07b4d43a8ff1b8edb34a602917cfa
 DIST 3.10-sched-bfs-440.patch 244510 SHA256 d77a7bdce57c5ba4708e05e867738d01b5d6a58f4c22770c4f048ea8238a6588 SHA512 8c5c3206c892f5280a3ddccb3d57ba37907adfd299ac05a108414e46871420458dfe09f46911342bc2a883711b57953151a76d179b5c59cdc6a4302de2cb97ed WHIRLPOOL 472f338faf5c5865434a54c890cfa3690a71598239aae382aa2b7a30389019bb589610fbf6852b2cb064c9f9233e4954d95ae31454bdcb8ce1be2fc3d8f46ecf
 DIST 3.12-sched-bfs-444.patch 251377 SHA256 0ff3d40daff1a7e71f15c072e43259c760730f941ce413050f3c856095586b8f SHA512 51f2f3a30d8ae1476e57768ecbeaa9e717be3a3728f276eedb178bedc65273acc3b9e23447c885bf66dde81435d96bf7fa05873de56cef84a9ba8d947560f030 WHIRLPOOL 1a1124b23401b5d52c2de9cd36ff6c53798734ad5520a7c23546fd8f7ad7ffbed55ad0286a285b3dd5221288a137ef3ca3d8b173a3046a9237ea452df192c75d
 DIST 3.14-sched-bfs-447.patch 245314 SHA256 cf71ec72daeaa1ae757e8aaea10a53f972b62548774e3c9bae95d388c7c158bb SHA512 b8ee8d42eeab19c4229a7cd391af6b732c2e8a179f5ed969f1cc8863dfed68d09a6c6e61860df103a5c9535768d8852f7ce2acdc0618b529acc98e2e33be9b0e WHIRLPOOL bfbf8b1e5c43f4908fdf8a115ce708ea68accfe9e9c8f530be43ecaca3df7abfe966164da52545f40c80fc5138e5deb152b8acb49882238899452e51d89e88ba
@@ -36,6 +37,7 @@ DIST linux-3.12.tar.xz 76384600 SHA256 2e120ec7fde19fa51dc6b6cc11c81860a0775defc
 DIST linux-3.14.tar.xz 78399152 SHA256 61558aa490855f42b6340d1a1596be47454909629327c49a5e4e10268065dffa SHA512 5730d83a7a81134c1e77c0bf89e42dee4f8251ad56c1ac2be20c59e26fdfaa7bea55f277e7af156b637f22e1584914a46089af85039177cb43485089c74ac26e WHIRLPOOL 5ad07b78c362ba0b21c50b4abb99407cae06bd08576f3fd8f36047b01409eba096263208020da3dcad4977eefc61d66502276754097bc127635df1d7a5817d41
 DIST linux-3.17.tar.xz 80333152 SHA256 f5153ec93c5fcd41b247950e6a9bcbc63fa87beafd112c133a622439a0f76251 SHA512 29c99764e371f7005dbbe2bbe4458b4deeae5297da7e5b719b0f29f6f018629338b608369162ae6bd76bec4d8719cf491257ac57fdd5277cce8941b7f90246a0 WHIRLPOOL 4b0ba9d997f28a317991287160c91c4e4f2245d7e08c7cb9691f67c3838bddb3ab8048b01e841e6659eceb94a269b6bde32f4ca521d999593d0e9473c8559b46
 DIST linux-3.4.tar.xz 66748028 SHA256 ff3dee6a855873d12487a6f4070ec2f7996d073019171361c955639664baa0c6 SHA512 1c49b336750c9c2b49d21e54126f22a800367296be0d57e6df28b1532cbeba7fc3bdf4cfe27d9810576e76c2db2e9c2493f0804451c915137cb78d7aa61f236c WHIRLPOOL a36e62fe197ba7c08d498a79034da58091a94348f69542241067c9ebef683f86371b2c0a3b3fb6c4611e2fb885d9b74eee5c1f46a493c72dfb76c5665f0b8a6a
+DIST patch-3.10-ck1-r1.bz2 57305 SHA256 7b7835ba32c3ce1afa81139c848b7f6ec13540ba00f64ef4290c56eea52808c4 SHA512 d58dd603f02853c945d5980630e5123f7cc5fd012e0c61508cd08962cbdd4e35dfb3a6dbdd9452d8b936e6c1ec2cb552b39dc3bc6dfc29e8d020c1e2ad92825f WHIRLPOOL 322da3c72ed3641f0ec8c071dd6fe79c5a860e87a3f023df9c1fd582ed16ffaf6ba67fa93806b7545658551bbb311235dfdae8db1f09b4fb7882c79827768b11
 DIST patch-3.10-ck1.bz2 57703 SHA256 747d893b69d040dd82650a1a2d509155beace337020619194661049920650ed6 SHA512 1be33e3e0a1b06a70e6fea5de2edebf989aa72edfc12d275e02fa73e99da7f8ceb5a5a6e1207efc851730524491f5a8071adbb4a49ba979129f64b736723b375 WHIRLPOOL 9921381564bcf1ad3b71b40043c9a84e2300ab86d80103c7e8f9595e92ca20de1d73db8ece2ebf8e5c3903352a7b644dc6a82f6b848119922a7aa9058d8f4d5b
 DIST patch-3.12-ck2.bz2 58929 SHA256 413def4af24ff70615cf5ef5cc1f1347bd634d87686a84ad0e2c2d3b052da8b8 SHA512 7f97d3db7569e7facd7eb85283519e4c8748e18b4767b8ba4a7637f18667eed3c4aadfe700f5788ed24038ca8c008452d8f9351cf92975055e93fbbdb38671a8 WHIRLPOOL 58d5617cc5fc3eec51a2f10adf9a0aa2c3611ef15b5efae9929b153f30d2443f3b4b011028b447a5e9e4541979fbc9aa337716f941bf6ec942382aea92f1f324
 DIST patch-3.14-ck1.bz2 58269 SHA256 8b5924a8aa17876d394cdeb84740d96317e94d2430caddf753c416100b917d3c SHA512 d745370376e660245e0a5cc4512f0c584a4c782ddb0747637d6ec60021d95afa09d5728f44756c48843b398ba3072823bea99b1713c0833c941a522da0b6f305 WHIRLPOOL 7a9dda7e0a20b2c2ee373d957441af83f2148cfdf224ba20fe699a1f319f898493534d4b3115ed09851604760b767d2cb4c97e7f01501e0e261fa68f21937572
